# WarGameNG

./: .gitlab-ci.yml  CMakeLists.txt  README.md  WarGameNG.sln
Client/: CMakeLists.txt  Client.vcxproj  Client.vcxproj.filters  CmakeLists.txt
Client/include/: AudioEngine.h  Bullet.h  Event.h  GameEngine.h  GuiLogger.h  MainPlayer.h  Map.h  NetworkEngine.h  Player.h  PlayerBase.h  ft_Delay.h  protobuf_test.h  sprite.h  test.pb.h  wargame_generated.h
Client/src/: AudioEngine.cpp  Bullet.cpp  Event.cpp  GameEngine.cpp  GuiLogger.cpp  MainPlayer.cpp  Map.cpp  NetworkEngine.cpp  Player.cpp  PlayerBase.cpp  ft_Delay.cpp  main.cpp  protobuf_test.cpp  test.pb.cpp
Server/: CMakeLists.txt  Server.vcxproj  Server.vcxproj.filters
Server/include/: Bullet.h  Logger.h  Map.h  NetworkEngine.h  PlayerBase.h
Server/src/: Bullet.cpp  Logger.cpp  Map.cpp  NetworkEngine.cpp  PlayerBase.cpp  main.cpp
flatbuffers/: wargame.fbs
test_client/: test.cpp  test_client.vcxproj
